# pid-rs

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/pid-core/: Cargo.toml  README.md  build.rs
crates/pid-core/benches/: estimators.rs
crates/pid-core/examples/: ksg_and_pid.rs
crates/pid-core/src/: bootstrap.rs  ci.rs  discrete_pid.rs  geometry.rs  hyperbolic.rs  invariants.rs  isx.rs  ksg.rs  lib.rs  logistic.rs  metric.rs  nn.rs  par.rs  pid2.rs  pid3.rs  pipeline.rs  pls.rs  preprocess.rs  stats.rs  sxpid.rs
crates/pid-core/tests/: cross_validation.rs  gaussian_pid_atoms.rs  isx.rs  ksg.rs  parallel_bit_identity.rs  preprocess.rs
crates/pid-core/tests/common/: mod.rs
crates/pid-python/: Cargo.toml  README.md  pyproject.toml
crates/pid-python/src/: lib.rs
crates/pid-python/tests/: test_smoke.py
crates/pid-runlog/: Cargo.toml  README.md
crates/pid-runlog/src/: lib.rs
scripts/: README.md  repin-pidrs.sh
